--- a/index.html
+++ b/index.html
@@ -5,16 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FashEase- An Ease To Fashion</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <style>
       body {
+        /* background-color: rgb(224, 221, 221); */
         margin: 0px;
         padding-top: 0px;
         box-sizing: border-box;
       }
       #navbar {
-        /* position: fixed; */
-        scroll-behavior: smooth;
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 100%;
+        background-color: white;
         height: 80px;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         display: flex;
@@ -59,7 +77,8 @@
       .buttons {
         margin: auto;
         width: 60%;
-        margin-top: 30px;
+        margin-top: 130px;
+        margin-bottom: 50px;
       }
       .buttons > button {
         width: 8.75%;
@@ -75,48 +94,79 @@
       }
       #container {
         width: 70%;
-        margin: 80px auto;
+        margin: auto;
         display: grid;
-        gap: 60px;
+        gap: 50px;
         grid-template-columns: repeat(3, 1fr);
       }
-      #container h4 {
+      #container h3 {
         padding-left: 20px;
+      }
+      .bottom h4 {
+        margin-top: 6px;
       }
       .bottom {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
       }
       .bottom img {
         width: 50px;
+      }
+      .bottom > div:nth-child(2) {
+        padding-right: 10px;
+        text-align: center;
+      }
+      .bottom > div:nth-child(3) > p {
+        margin-top: 4px;
+        padding-top: 0px;
+      }
+      .bottom > div:nth-child(1) > img {
+        margin-top: 2px;
+      }
+      .bottom > div:nth-child(4) {
+        padding-right: 10px;
+        text-align: center;
       }
       .photo {
         width: 100%;
       }
       #container > div {
-        height: 450px;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
-          rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+        box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+        background-color: white;
       }
       .personImg {
         width: 80px;
         border-radius: 35px;
-        /* margin: auto; */
+        margin: auto;
       }
-      .person {
-        border: 1px solid red;
+      .image {
+        display: flex;
       }
-      .person > img {
-        margin-top: 25px;
+      .image > img {
+        width: 50%;
       }
     </style>
   </head>
   <body>
+    <!-- <div class="owl-carousel owl-theme">
+      <div class="item"><h4>1</h4></div>
+      <div class="item"><h4>2</h4></div>
+      <div class="item"><h4>3</h4></div>
+      <div class="item"><h4>4</h4></div>
+      <div class="item"><h4>5</h4></div>
+      <div class="item"><h4>6</h4></div>
+      <div class="item"><h4>7</h4></div>
+      <div class="item"><h4>8</h4></div>
+      <div class="item"><h4>9</h4></div>
+      <div class="item"><h4>10</h4></div>
+      <div class="item"><h4>11</h4></div>
+      <div class="item"><h4>12</h4></div>
+    </div> -->
     <header id="navbar">
       <div class="tab1">
         <img src="./White Modern Beauty Logo(1).png" alt="" />
         <a href="">WOMEN</a>
-        <a href="">MEN</a>
+        <a href="./Men.html">MEN</a>
         <a href="">KIDS</a>
         <a href="">HOME</a>
         <a href="">OFFERS</a>
@@ -233,7 +283,24 @@
 
     <div id="container"></div>
   </body>
+
   <script>
+    // let images = [
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1651469168362.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1674029296684.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1677239926933.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1676438894037.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1678466728484.jpg?crsl_pos=0",
+    //   "https://img0.junaroad.com/images/banners/B2G1_13january2023_1673587401792.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1652694665568.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1679910119705.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1679910400865.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1676008328934.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1667388470485.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1658918101342.jpg?crsl_pos=0",
+    //   "https://img1.junaroad.com//assets/images/mobileNotif/img-1667988209100.jpg?crsl_pos=0",
+    // ];
+
     let API = "https://6425ba6ed24d7e0de461a198.mockapi.io/product";
     let data;
     let body = document.body;
@@ -250,33 +317,36 @@
     let container = document.getElementById("container");
 
     function display(data) {
-      data.forEach(function (product, index) {
+      container.innerHTML = "";
+      // data.forEach(function (product, index)
+      for (let i = 0; i < data.length; i++) {
         let prod = document.createElement("div");
         let anchor = document.createElement("a");
-        let name = document.createElement("h4");
-        name.innerText = product.name;
+        let name = document.createElement("h3");
+        name.innerText = data[i].name;
 
         let image = document.createElement("img");
-        image.setAttribute("src", product.image);
+        image.setAttribute("src", data[i].image);
         image.setAttribute("class", "photo");
 
         let bottom = document.createElement("div");
         bottom.setAttribute("class", "bottom");
         let person = document.createElement("div");
         person.setAttribute("class", "person");
+
         let follow = document.createElement("div");
         let like = document.createElement("div");
         let share = document.createElement("div");
 
         let personImg = document.createElement("img");
-        personImg.setAttribute("src", product.person);
+        personImg.setAttribute("src", data[i].person);
         personImg.setAttribute("class", "personImg");
 
-        let by = document.createElement("p");
-        by.innerText = `By-- ${product.by}`;
+        let by = document.createElement("h4");
+        by.innerText = `By-- ${data[i].by}`;
 
         let follower = document.createElement("p");
-        follower.innerText = `${product.followers} followers`;
+        follower.innerText = `${data[i].followers} followers`;
 
         let likeImg = document.createElement("img");
         likeImg.setAttribute(
@@ -284,7 +354,7 @@
           "https://imgs.search.brave.com/c6KN1TX0h_M4dur3y1dls7mnq4QJkOVJ3NF3yOkm8F0/rs:fit:632:225:1/g:ce/aHR0cHM6Ly90c2Uz/Lm1tLmJpbmcubmV0/L3RoP2lkPU9JUC5W/U1Axc0tmaHQ2QXk0/T29jVkpXaFZRSGFG/aiZwaWQ9QXBp"
         );
         let likes = document.createElement("p");
-        likes.innerText = `${product.likes} Likes`;
+        likes.innerText = `${data[i].likes} Likes`;
         let shareImg = document.createElement("img");
         shareImg.setAttribute(
           "src",
@@ -301,7 +371,38 @@
         share.append(shareImg, shares);
         prod.append(anchor, bottom);
         container.append(prod);
-      });
+      }
+      // });
     }
   </script>
+  <!-- <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+    integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  ></script>
+  <script
+  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+  integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+  ></script>
+  <script>
+    $(".owl-carousel").owlCarousel({
+      loop: true,
+      margin: 10,
+      nav: true,
+      responsive: {
+        0: {
+          items: 1,
+        },
+        600: {
+          items: 3,
+        },
+        1000: {
+          items: 5,
+        },
+      },
+    });
+  </script> -->
 </html>
